add core modules and navigation

--- a/settings.gradle
+++ b/settings.gradle
@@ -17,3 +17,5 @@ include ':app'
 include ':feature-character_list'
 include ':feature-detail'
 include ':utils'
+include ':core-db'
+include ':core-network'
