--- a/feature-character_list/build.gradle
+++ b/feature-character_list/build.gradle
@@ -51,6 +51,13 @@ dependencies {
     //CircleImageView
     implementation 'de.hdodenhof:circleimageview:3.1.0'
 
+    // dagger 2
+    def dagger_version = '2.42'
+    implementation "com.google.dagger:dagger:$dagger_version"
+    kapt "com.google.dagger:dagger-compiler:$dagger_version"
+
     implementation project(":feature-detail")
+    implementation project(":core-network")
+    implementation project(":core-db")
     implementation project(":utils")
 }
