--- a/feature-detail/build.gradle
+++ b/feature-detail/build.gradle
@@ -47,4 +47,13 @@ dependencies {
     def navVersion = "2.4.2"
     implementation "androidx.navigation:navigation-fragment-ktx:$navVersion"
     implementation "androidx.navigation:navigation-ui-ktx:$navVersion"
+
+    // dagger 2
+    def dagger_version = '2.42'
+    implementation "com.google.dagger:dagger:$dagger_version"
+    kapt "com.google.dagger:dagger-compiler:$dagger_version"
+
+    implementation project(path: ':core-network')
+    implementation project(path: ':core-db')
+    implementation project(":utils")
 }
