--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,7 @@ buildscript {
     }
     dependencies {
         classpath("androidx.navigation:navigation-safe-args-gradle-plugin:2.4.2")
+        classpath("com.google.dagger:hilt-android-gradle-plugin:2.42")
     }
 }
 
@@ -13,6 +14,7 @@ plugins {
     id 'com.android.library' version '7.1.1' apply false
     id 'org.jetbrains.kotlin.android' version '1.6.10' apply false
     id 'org.jetbrains.kotlin.jvm' version '1.6.10' apply false
+    id 'com.google.dagger.hilt.android' version '2.42' apply false
 }
 
 task clean(type: Delete) {
