--- a/core-db/build.gradle
+++ b/core-db/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'com.android.library'
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-kapt'
+    id 'dagger.hilt.android.plugin'
 }
 
 android {
@@ -45,16 +46,25 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
     // dagger 2
-    def dagger_version = '2.42'
-    implementation "com.google.dagger:dagger:$dagger_version"
-    kapt "com.google.dagger:dagger-compiler:$dagger_version"
+//    def daggerVersion = '2.42'
+//    implementation "com.google.dagger:dagger:$daggerVersion"
+//    kapt "com.google.dagger:dagger-compiler:$daggerVersion"
+
+    // Hilt
+    def hiltVersion = "2.42"
+    implementation "com.google.dagger:hilt-android:$hiltVersion"
+    kapt "com.google.dagger:hilt-android-compiler:$hiltVersion"
 
     // room
-    def room_version = '2.4.2'
-    implementation("androidx.room:room-runtime:$room_version")
+    def roomVersion = '2.4.2'
+    implementation("androidx.room:room-runtime:$roomVersion")
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    annotationProcessor("androidx.room:room-compiler:$room_version")
-    kapt("androidx.room:room-compiler:$room_version")
-    implementation("androidx.room:room-ktx:$room_version")
+    annotationProcessor("androidx.room:room-compiler:$roomVersion")
+    kapt("androidx.room:room-compiler:$roomVersion")
+    implementation("androidx.room:room-ktx:$roomVersion")
 
+    // Paging
+    def pagingVersion = "3.1.1"
+    implementation "androidx.paging:paging-runtime-ktx:$pagingVersion"
+    implementation("androidx.room:room-paging:2.5.0-alpha01")
 }
