--- a/feature-character_list/build.gradle
+++ b/feature-character_list/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'org.jetbrains.kotlin.android'
     id 'androidx.navigation.safeargs'
     id 'kotlin-kapt'
+    id 'dagger.hilt.android.plugin'
 }
 
 android {
@@ -51,10 +52,33 @@ dependencies {
     //CircleImageView
     implementation 'de.hdodenhof:circleimageview:3.1.0'
 
-    // dagger 2
-    def dagger_version = '2.42'
-    implementation "com.google.dagger:dagger:$dagger_version"
-    kapt "com.google.dagger:dagger-compiler:$dagger_version"
+    // Coroutines and Flow
+    def coroutinesVersion = "1.6.1"
+    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutinesVersion")
+
+//    // dagger 2
+//    def daggerVersion = "2.42"
+//    implementation "com.google.dagger:dagger:$daggerVersion"
+//    kapt "com.google.dagger:dagger-compiler:$daggerVersion"
+
+    // Hilt
+    def hiltVersion = "2.42"
+    implementation "com.google.dagger:hilt-android:$hiltVersion"
+    kapt "com.google.dagger:hilt-android-compiler:$hiltVersion"
+
+    // room
+    def roomVersion = '2.4.2'
+    implementation("androidx.room:room-runtime:$roomVersion")
+    kapt("androidx.room:room-compiler:$roomVersion")
+
+    // Glide
+    def glideVersion = "4.13.2"
+    implementation "com.github.bumptech.glide:glide:$glideVersion"
+
+    // Paging
+    def pagingVersion = "3.1.1"
+    implementation "androidx.paging:paging-runtime-ktx:$pagingVersion"
+    implementation("androidx.room:room-paging:2.5.0-alpha01")
 
     implementation project(":feature-detail")
     implementation project(":core-network")
