--- a/settings.gradle
+++ b/settings.gradle
@@ -12,7 +12,7 @@ dependencyResolutionManagement {
         mavenCentral()
     }
 }
-rootProject.name = "FinalTask"
+rootProject.name = "Guide Rick And Morty"
 include ':app'
 include ':feature-character_list'
 include ':feature-detail'
