--- a/core-db/build.gradle
+++ b/core-db/build.gradle
@@ -45,23 +45,15 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
-    // dagger 2
-//    def daggerVersion = '2.42'
-//    implementation "com.google.dagger:dagger:$daggerVersion"
-//    kapt "com.google.dagger:dagger-compiler:$daggerVersion"
-
     // Hilt
     def hiltVersion = "2.42"
     implementation "com.google.dagger:hilt-android:$hiltVersion"
     kapt "com.google.dagger:hilt-android-compiler:$hiltVersion"
 
-    // room
+    // Room
     def roomVersion = '2.4.2'
     implementation("androidx.room:room-runtime:$roomVersion")
-    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    annotationProcessor("androidx.room:room-compiler:$roomVersion")
     kapt("androidx.room:room-compiler:$roomVersion")
-    implementation("androidx.room:room-ktx:$roomVersion")
 
     // Paging
     def pagingVersion = "3.1.1"
