--- a/core-network/build.gradle
+++ b/core-network/build.gradle
@@ -40,17 +40,12 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
-    // dagger 2
-//    def daggerVersion = '2.42'
-//    implementation "com.google.dagger:dagger:$daggerVersion"
-//    kapt "com.google.dagger:dagger-compiler:$daggerVersion"
-
     // Hilt
     def hiltVersion = "2.42"
     implementation "com.google.dagger:hilt-android:$hiltVersion"
     kapt "com.google.dagger:hilt-android-compiler:$hiltVersion"
 
-    // retrofit
+    // Retrofit
     def retrofitVersion = '2.9.0'
     implementation "com.squareup.retrofit2:converter-moshi:$retrofitVersion"
 
