--- a/feature-character_list/build.gradle
+++ b/feature-character_list/build.gradle
@@ -44,29 +44,21 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
-    //navigation
+    //Navigation
     def navVersion = "2.4.2"
     implementation "androidx.navigation:navigation-fragment-ktx:$navVersion"
     implementation "androidx.navigation:navigation-ui-ktx:$navVersion"
 
-    //CircleImageView
-    implementation 'de.hdodenhof:circleimageview:3.1.0'
-
     // Coroutines and Flow
     def coroutinesVersion = "1.6.1"
     implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutinesVersion")
-
-//    // dagger 2
-//    def daggerVersion = "2.42"
-//    implementation "com.google.dagger:dagger:$daggerVersion"
-//    kapt "com.google.dagger:dagger-compiler:$daggerVersion"
 
     // Hilt
     def hiltVersion = "2.42"
     implementation "com.google.dagger:hilt-android:$hiltVersion"
     kapt "com.google.dagger:hilt-android-compiler:$hiltVersion"
 
-    // room
+    // Room
     def roomVersion = '2.4.2'
     implementation("androidx.room:room-runtime:$roomVersion")
     kapt("androidx.room:room-compiler:$roomVersion")
