--- a/feature-detail/build.gradle
+++ b/feature-detail/build.gradle
@@ -44,15 +44,10 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
-    //navigation
+    //Navigation
     def navVersion = "2.4.2"
     implementation "androidx.navigation:navigation-fragment-ktx:$navVersion"
     implementation "androidx.navigation:navigation-ui-ktx:$navVersion"
-
-//    // dagger 2
-//    def daggerVersion = '2.42'
-//    implementation "com.google.dagger:dagger:$daggerVersion"
-//    kapt "com.google.dagger:dagger-compiler:$daggerVersion"
 
     // Hilt
     def hiltVersion = "2.42"
