--- a/utils/build.gradle
+++ b/utils/build.gradle
@@ -40,11 +40,6 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
-    // dagger 2
-//    def daggerVersion = '2.42'
-//    implementation "com.google.dagger:dagger:$daggerVersion"
-//    kapt "com.google.dagger:dagger-compiler:$daggerVersion"
-
     // Hilt
     def hiltVersion = "2.42"
     implementation "com.google.dagger:hilt-android:$hiltVersion"
@@ -55,19 +50,14 @@ dependencies {
     implementation "androidx.paging:paging-runtime-ktx:$pagingVersion"
     implementation("androidx.room:room-paging:2.5.0-alpha01")
 
-    // room
+    // Room
     def roomVersion = '2.4.2'
     implementation("androidx.room:room-runtime:$roomVersion")
-    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    annotationProcessor("androidx.room:room-compiler:$roomVersion")
     kapt("androidx.room:room-compiler:$roomVersion")
-    implementation("androidx.room:room-ktx:$roomVersion")
 
-    // retrofit
+    // Retrofit
     def retrofitVersion = '2.9.0'
-    implementation "com.squareup.retrofit2:retrofit:$retrofitVersion"
-    implementation "com.squareup.retrofit2:converter-gson:$retrofitVersion"
-    implementation 'com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2'
+    implementation "com.squareup.retrofit2:converter-moshi:$retrofitVersion"
 
     implementation project(":core-db")
     implementation project(":core-network")
