add README file

--- a/feature-character_list/build.gradle
+++ b/feature-character_list/build.gradle
@@ -62,6 +62,7 @@ dependencies {
     def roomVersion = '2.4.2'
     implementation("androidx.room:room-runtime:$roomVersion")
     kapt("androidx.room:room-compiler:$roomVersion")
+    implementation("androidx.room:room-ktx:$roomVersion")
 
     // Glide
     def glideVersion = "4.13.2"
