--- a/utils/build.gradle
+++ b/utils/build.gradle
@@ -54,6 +54,7 @@ dependencies {
     def roomVersion = '2.4.2'
     implementation("androidx.room:room-runtime:$roomVersion")
     kapt("androidx.room:room-compiler:$roomVersion")
+    implementation("androidx.room:room-ktx:$roomVersion")
 
     // Retrofit
     def retrofitVersion = '2.9.0'
